# Cmake

./: .gitignore  Command.txt  README.md
0-set-up/: CMakeLists.txt  main.cpp
0-set-up/sub-cmake/: functions.cmake
1-building-lib/: CMakeLists.txt
1-building-lib/calc/: CMakeLists.txt
1-building-lib/calc/include/: calc.h
1-building-lib/calc/src/: calc.cpp
1-building-lib/print/: CMakeLists.txt
1-building-lib/print/include/: color.h  print.h
1-building-lib/print/src/: color.cpp  print.cpp
1-building-lib/src/: CMakeLists.txt  main.cpp  main.h
2-project-management/: CMakeLists.txt
2-project-management/lib/: CMakeLists.txt
2-project-management/lib/calc/include/: calc.h
2-project-management/lib/calc/src/: calc.cpp
2-project-management/lib/test/: test_1.cpp  test_2.cpp  test_3.cpp
2-project-management/src/: CMakeLists.txt  main.cpp  main.h
3-dependency/: CMakeLists.txt
3-dependency/include/: CMakeLists.txt
3-dependency/include/glad/: CMakeLists.txt
3-dependency/include/glad/include/glad/: glad.h
3-dependency/include/glad/src/: glad.c
3-dependency/include/glew/: CMakeLists.txt
3-dependency/src/: CMakeLists.txt  main.cpp
build_library/: CMakeLists.txt
build_library/lib/convert/: CMakeLists.txt  convert.cpp  convert.h
build_library/lib/math/: math.h
build_library/lib/print/: print.cpp  print.h
build_library/src/: CMakeLists.txt  main.cpp  main.h
build_library/src/lib/math/: math.cpp
introduction/: CMakeLists.txt
introduction/src/: CMakeLists.txt
